--- a/GCMP_Analysis_Fall2024_V3.Rmd
+++ b/GCMP_Analysis_Fall2024_V3.Rmd
@@ -21,14 +21,13 @@ setwd("C:/Users/Colin Howe/Desktop/PSU Doctoral Program/GCMP_Working/gcmp_analys
 library(BiocManager)
 library(phyloseq)
 library(dplyr)
-library(qiime2R)
 library(DESeq2)
 library(ComplexHeatmap)
 library(ade4)
 library(vegan)
 library(RColorBrewer)
-library(tidyverse)
 library(ggplot2)
+library(ape)
 library(microbiome)
 library(dendextend)
 library(gplots)
@@ -37,8 +36,10 @@ library(tidyr)
 library(ggpubr)
 library(cowplot)
 library(RVAideMemoire)
-library(ape)
 library(microbiomeMarker)
+library(qiime2R)
+library(tidyverse)
+
 ```
 
 # Import OTU Table Taxonomy and Tree from Qiime2 and import Metadata
@@ -123,7 +124,7 @@ phylo_coral = prune_samples(sample_sums(phylo_noNA) > 1, phylo_noNA)
 main_coral
 phylo_noKing
 phylo_noNA
-phylo_coral # 729 samples with 60304 unique asv
+phylo_coral # 729 samples with 59796 unique asv
 
 ```
 
@@ -132,41 +133,41 @@ phylo_coral # 729 samples with 60304 unique asv
 #clear entire dataset
 #rm(list=ls())
 
-## Caribbean dataset rarefication to 1000 per sample for downstream analysis
+## Caribbean dataset rarefication to 1000 per sample for downstream analysis Retained 997,000 (15.42%) features in 997 (92.92%) samples at the specifed sampling depth.
 #seed set to 111 to keep result reproductive
 
 ############# Subsample Colombian region including E5 & E12 Cartagena Coast ################
 #### Subsample Colombia Expedition E5
 
-coral <-subset_samples(phylo_coral, sample_type_EMP == "coral" & outgroup == "no" & within_group == "yes") # all corals without out groups, environmental samples & subset expeditions (i.e, singapore).
+coral <-subset_samples(phylo_coral, sample_type_EMP == "coral" & outgroup == "n" & within_group == "yes") # all corals without out groups, environmental samples & subset expeditions (i.e, singapore).
 coral
 
 # rarefy to even depth
-coral.rarefied = rarefy_even_depth(coral, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+coral.rarefied = rarefy_even_depth(coral, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 coral.rarefied
 
 
-colombia5 <-subset_samples(phylo_coral, political_area == "Colombia" & expedition_number == "E5" & sample_type_EMP == "coral" & outgroup == "no")
+colombia5 <-subset_samples(phylo_coral, political_area == "Colombia" & expedition_number == "E5" & sample_type_EMP == "coral" & outgroup == "n")
 colombia5
 
 # rarefy to even depth
-colombia.rarefied5 = rarefy_even_depth(colombia5, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+colombia.rarefied5 = rarefy_even_depth(colombia5, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 colombia.rarefied5
 
 #### Subsample Colombia Expedition E12
-colombia12 <-subset_samples(phylo_coral, political_area == "Colombia" & expedition_number == "E12" & sample_type_EMP == "coral")
+colombia12 <-subset_samples(phylo_coral, political_area == "Colombia" & expedition_number == "E12" & sample_type_EMP == "coral"& outgroup == "n")
 colombia12
 
 # rarefy to even depth
-colombia.rarefied12 = rarefy_even_depth(colombia12, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+colombia.rarefied12 = rarefy_even_depth(colombia12, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 colombia.rarefied12
 
 #### Subsample Corals from Colombia includes E5 & E12
-colombia <-subset_samples(phylo_coral, political_area == "Colombia" & sample_type_EMP == "coral" )
+colombia <-subset_samples(phylo_coral, political_area == "Colombia" & sample_type_EMP == "coral" & outgroup == "n")
 colombia
 
 # rarefy to even depth
-colombia.rarefied = rarefy_even_depth(colombia, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+colombia.rarefied = rarefy_even_depth(colombia, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 colombia.rarefied
 
 #### Subsample Orbicella from Colombia E5 & E12
@@ -174,7 +175,7 @@ col_orb <-subset_samples(phylo_coral, political_area == "Colombia" & host_genus_
 col_orb
 
 # rarefy to even depth
-col.orb.rarefied = rarefy_even_depth(col_orb, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+col.orb.rarefied = rarefy_even_depth(col_orb, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 col.orb.rarefied
 
 #### Subsample Orbicella faveolata E5 & E12
@@ -182,32 +183,32 @@ faveolata <-subset_samples(phylo_coral, political_area == "Colombia" & host_spec
 faveolata
 
 # rarefy to even depth faveolata
-faveolata.rarefied = rarefy_even_depth(faveolata, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+faveolata.rarefied = rarefy_even_depth(faveolata, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 faveolata.rarefied
 
 
 ############# Subsample Panama political_area including E2 & E11 East & West################
-panama <-subset_samples(phylo_coral, political_area == "Panama" & sample_type_EMP == "coral")
+panama <-subset_samples(phylo_coral, political_area == "Panama" & sample_type_EMP == "coral" & outgroup == "n")
 panama
 
 # rarefy to even depth
-panama.rarefied = rarefy_even_depth(panama, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+panama.rarefied = rarefy_even_depth(panama, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 panama.rarefied
 
 #### Subsample Panama west E11
-panama.w <-subset_samples(phylo_coral, political_area == "Panama" & expedition_number == "E11" & sample_type_EMP == "coral")
+panama.w <-subset_samples(phylo_coral, political_area == "Panama" & expedition_number == "E11" & sample_type_EMP == "coral" & outgroup == "n")
 panama.w
 
 # rarefy to even depth
-panama.w.rarefied = rarefy_even_depth(panama.w, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+panama.w.rarefied = rarefy_even_depth(panama.w, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 panama.w.rarefied
 
 #### Subsample Panama east E2
-panama.e <-subset_samples(phylo_coral, political_area == "Panama" & expedition_number == "E2" & sample_type_EMP == "coral")
+panama.e <-subset_samples(phylo_coral, political_area == "Panama" & expedition_number == "E2" & sample_type_EMP == "coral" & outgroup == "n")
 panama.e
 
 # rarefy to even depth
-panama.e.rarefied = rarefy_even_depth(panama.e, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+panama.e.rarefied = rarefy_even_depth(panama.e, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 panama.e.rarefied
 
 #### Subsample Panama Orbicella Corals
@@ -215,7 +216,7 @@ pan_orb <-subset_samples(phylo_coral, political_area == "Panama" & host_genus_id
 pan_orb
 
 # rarefy to even depth
-pan.orb.rarefied = rarefy_even_depth(pan_orb, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+pan.orb.rarefied = rarefy_even_depth(pan_orb, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 pan.orb.rarefied
 
 ############# Subsample Orbicella and Environmental Samples################
@@ -223,15 +224,15 @@ pan.orb.rarefied
 orbicella <- subset_samples(phylo_coral, host_genus_id == "Orbicella") 
 
 # rarefy to even depth
-orb.rarefied = rarefy_even_depth(orbicella, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+orb.rarefied = rarefy_even_depth(orbicella, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 orb.rarefied
 
 ## Overall Caribbean
-carib <-subset_samples(phylo_coral, ocean_area == "Caribbean" & sample_type_EMP == "coral")
+carib <-subset_samples(phylo_coral, ocean_area == "Caribbean" & sample_type_EMP == "coral" & outgroup == "n")
 carib
 
 # rarefy to even depth
-carib.rarefied = rarefy_even_depth(carib, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+carib.rarefied = rarefy_even_depth(carib, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 carib.rarefied
 
 #### Environmental Samples 
@@ -239,7 +240,7 @@ env_sample <- subset_samples(phylo_coral, env_sample == "yes" & political_area =
 env_sample
 
 # keep result reproductive
-env.rarefied = rarefy_even_depth(env_sample, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+env.rarefied = rarefy_even_depth(env_sample, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 env.rarefied
 
 #### Water 
@@ -247,7 +248,7 @@ water <- subset_samples(phylo_coral, sample_type == "Reef Water" & political_are
 water
 
 # keep result reproductive
-water.rarefied = rarefy_even_depth(water, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+water.rarefied = rarefy_even_depth(water, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 water.rarefied
 
 #### Sediment 
@@ -255,16 +256,16 @@ sediment <- subset_samples(phylo_coral, sample_type == "Reef Sediment" & politic
 sediment
 
 # keep result reproductive
-sed.rarefied = rarefy_even_depth(sediment, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+sed.rarefied = rarefy_even_depth(sediment, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 sed.rarefied
 
 ## Hawaii 
 #### Subsample Panama east E2
-hawaii <-subset_samples(phylo_coral, expedition_number == "E15" & sample_type_EMP == "coral")
+hawaii <-subset_samples(phylo_coral, expedition_number == "E15" & sample_type_EMP == "coral" & outgroup == "n")
 hawaii
 
 # rarefy to even depth
-hawaii.rarefied = rarefy_even_depth(hawaii, rngseed=111, sample.size=2500, replace=F, trimOTUs = TRUE)
+hawaii.rarefied = rarefy_even_depth(hawaii, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 hawaii.rarefied
 
 
@@ -286,7 +287,7 @@ glom_env <- tax_glom(env.rarefied, taxrank = 'Family', NArm = TRUE)## 45 samples
 glom_wat <- tax_glom(water.rarefied, taxrank = 'Family', NArm = TRUE)## 30 samples from Colombia, Panama only has one environmental sample
 glom_sed <- tax_glom(sed.rarefied, taxrank = 'Family', NArm = TRUE)## 14 samples from Colombia, Panama only has one environmental 
 glom_haw <- tax_glom(hawaii.rarefied, taxrank = 'Family', NArm = TRUE) ## 52 Samples 
-glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 52 Samples 
+glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 360 Samples 
 ```
 
 #Bruns et al. 2016 Neutral Model functions
@@ -333,7 +334,7 @@ d = 1/N
 
 ##Fit model parameter m (or Nm) using Non-linear least squares (NLS)
 m.fit <- nlsLM(freq ~ pbeta(d, N*m*p, N*m*(1-p), lower.tail=FALSE), start=list(m=0.1))
-m.ci <- confint(m.fit, 'm', level=0.99)
+m.ci <- confint(m.fit, 'm', level=0.95)
 	
 ##Fit neutral model parameter m (or Nm) using Maximum likelihood estimation (MLE)
 sncm.LL <- function(m, sigma){
@@ -353,7 +354,7 @@ freq.pred <- pbeta(d, N*coef(m.fit)*p, N*coef(m.fit)*(1-p), lower.tail=FALSE)
 Rsqr <- 1 - (sum((freq - freq.pred)^2))/(sum((freq - mean(freq))^2))
 RMSE <- sqrt(sum((freq-freq.pred)^2)/(length(freq)-1))
 	
-pred.ci <- binconf(freq.pred*nrow(spp), nrow(spp), alpha=0.01, method="wilson", return.df=TRUE)
+pred.ci <- binconf(freq.pred*nrow(spp), nrow(spp), alpha=0.05, method="wilson", return.df=TRUE)
 	
 ##Calculate AIC for binomial model
 bino.LL <- function(mu, sigma){
@@ -371,7 +372,7 @@ bino.pred <- pbinom(d, N, p, lower.tail=FALSE)
 Rsqr.bino <- 1 - (sum((freq - bino.pred)^2))/(sum((freq - mean(freq))^2))
 RMSE.bino <- sqrt(sum((freq - bino.pred)^2)/(length(freq) - 1))
 
-bino.pred.ci <- binconf(bino.pred*nrow(spp), nrow(spp), alpha=0.01, method="wilson", return.df=TRUE)
+bino.pred.ci <- binconf(bino.pred*nrow(spp), nrow(spp), alpha=0.05, method="wilson", return.df=TRUE)
 	
 ##Calculate AIC for Poisson model
 pois.LL <- function(mu, sigma){
@@ -433,7 +434,7 @@ addf = function(freq, pred.upr, pred.lwr) {
 ###coral communities
 set.seed(111)
 coral <- 0
-coral <- prune_taxa(taxa_sums(glom_wat) > 0, glom_wat)
+coral <- prune_taxa(taxa_sums(glom_coral) > 0, glom_coral)
 coral
 otu_coral = as.data.frame(t(otu_table(coral)))
 
@@ -452,15 +453,15 @@ mod1_w_coral$model <- factor(mod1_w_coral$model,
                              levels = c("above", "neutral", "below"))
 
 ## Assign Taxonomy to table of significant microbes
-coral_taxa = cbind(as(mod1_w_coral, "data.frame"), as(tax_table(glom_wat)[rownames(mod1_w_coral), ], "matrix"))
+coral_taxa = cbind(as(mod1_w_coral, "data.frame"), as(tax_table(glom_coral)[rownames(mod1_w_coral), ], "matrix"))
 #coral_taxa
-write.csv(coral_taxa,"Colombia E5 & E12 Water Samples Neutral Taxonomy table.csv",row.names = TRUE)
+write.csv(coral_taxa,"All Coral Samples Neutral Taxonomy table.csv",row.names = TRUE)
 
 
 set.seed(111)
 ###seawater communities
 #seawater <- subset_samples(physeq2, SampleType == "seawater")
-seawater <- prune_taxa(taxa_sums(glom_sed) > 0, glom_sed)
+seawater <- prune_taxa(taxa_sums(glom_haw) > 0, glom_haw)
 seawater
 
 otu_seawater = as.data.frame(t(otu_table(seawater)))
@@ -478,9 +479,9 @@ mod1_w_seawater$model <- factor(mod1_w_seawater$model,
                                 levels = c("above", "neutral", "below"))
 
 ## Assign Taxonomy to table of significant microbes
-env_taxa = cbind(as(mod1_w_seawater, "data.frame"), as(tax_table(glom_sed)[rownames(mod1_w_seawater), ], "matrix"))
+env_taxa = cbind(as(mod1_w_seawater, "data.frame"), as(tax_table(glom_haw)[rownames(mod1_w_seawater), ], "matrix"))
 
-write.csv(env_taxa,"Colombia E5 &E12 Sediment Samples Neutral Taxonomy table.csv",row.names = TRUE)
+write.csv(env_taxa,"Hawaii E15 Coral Samples Neutral Taxonomy table.csv",row.names = TRUE)
 
 
 ```
@@ -513,7 +514,7 @@ p_neuM_coral=ggplot(mod1_w_coral, aes(x=log10(p), y=freq, color = model))+
 
 lb1 <- mod_w_coral$Rsqr
 lb2 <- mod_w_coral$m
-lb3 <- expression(paste("Colombia Water \n Coral Samples"))
+lb3 <- expression(paste("All Coral Samples"))
 
 p_neuM_coral1 = p_neuM_coral + annotate("text", x = -3.5, y=0.7, size=6.5, label=lb1, 
                                         fontface="bold", color="black",
@@ -551,7 +552,7 @@ p_neuM_seawater=ggplot(mod1_w_seawater, aes(x=log10(p), y=freq, color = model))+
 
 ev1 <- mod_w_seawater$Rsqr
 ev2 <- mod_w_seawater$m
-ev3 <- expression(paste("Colombia Sediment \n Coral Samples"))
+ev3 <- expression(paste("Hawaii E15 \n Coral Samples"))
 
 p_neuM_seawater1 = p_neuM_seawater + annotate("text", x = -3.5, y=0.7, size=6.5, label=ev1, 
                                               fontface="bold", color="black",
@@ -619,9 +620,17 @@ plot(testp)
 # Calculate DISTANCE MATRICES
 ```{r}
 ## Distance Matrices
-#all_coral <- subset_samples(phylo_coral, sample_type_EMP == "coral")
 
-## Corals 
+## All Corals 
+bray_coral = phyloseq::distance(coral.rarefied, method="bray")
+uni_coral = phyloseq::distance(coral.rarefied, method="unifrac")
+wuni_coral = phyloseq::distance(coral.rarefied, method="wUnifrac")
+
+# Create data frame for downstream analysis
+coral_df <- data.frame(sample_data(coral.rarefied))
+
+
+## Caribbean Corals 
 bray_carib = phyloseq::distance(carib.rarefied, method="bray")
 uni_carib = phyloseq::distance(carib.rarefied, method="unifrac")
 wuni_carib = phyloseq::distance(carib.rarefied, method="wUnifrac")
@@ -685,11 +694,11 @@ endo_df <- data.frame(sample_data(cyclo_prune))
 # Ordination from Distance Matrix and PCoA Plots 
 ```{r}
 ##Calculate the PCoA on Complex Corals
-rt.pcoa = ordinate(flavo_prune, method="PCoA", distance=wuni_flavo)
+rt.pcoa = ordinate(coral.rarefied, method="PCoA", distance=bray_coral)
 # Set variables to zero for subsequent changes
-#Ofra
+# expedition_number
 pcoa<-0
-pcoa <- plot_ordination(flavo_prune, rt.pcoa,  shape = "BiologicalMatter",color="expedition_number")+  geom_point(size=3) + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + stat_ellipse(level = 0.95,type = "norm",aes(group=expedition_number))+ theme(legend.text=element_text(size=12)) + theme(axis.text=element_text(size=12, face = "bold"), axis.title=element_text(size=14,face="bold") + theme(text = element_text(size = 20,face = "bold"))) # title =expression(paste(italic(" Orbicella spp")," Bray-Curtis Distance PCoA across Depth")) scale_color_manual(values=c("#E31A1C","#1F78B4"))+
+pcoa <- plot_ordination(coral.rarefied, rt.pcoa,  shape = "expedition_number",color="run_prefix")+  geom_point(size=3) + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + stat_ellipse(level = 0.95,type = "norm",aes(group=run_prefix))+ theme(legend.text=element_text(size=12)) + theme(axis.text=element_text(size=12, face = "bold"), axis.title=element_text(size=14,face="bold") + theme(text = element_text(size = 20,face = "bold"))) # title =expression(paste(italic(" Orbicella spp")," Bray-Curtis Distance PCoA across Depth")) scale_color_manual(values=c("#E31A1C","#1F78B4"))+
                       
 
 ```
@@ -715,7 +724,7 @@ set.seed(129)
 
 # This is what is called a for loop.        
 for (i in distance_methods){ 
-  form <- as.formula(paste(i,"country_region+family+BiologicalMatter+sequence_run", sep="~"))
+  form <- as.formula(paste(i,"expedition_number+family+BiologicalMatter+run_prefix+depth", sep="~"))
   print(form)
  adonis2(form, data=coral_df)-> result
  print(result)
@@ -723,11 +732,10 @@ for (i in distance_methods){
  
 
 ## Post-hoc comparison between Coral Compartments and Location
-bray_coral_pairwise <-pairwise.perm.manova(bray_coral, coral_df$country_region,nperm=1000) 
-uni_coral_pairwise <-pairwise.perm.manova(uni_coral,coral_df$biological_matter,nperm=1000)
-wuni_coral_pairwise <-pairwise.perm.manova(wuni_coral,coral_df$biological_matter,nperm=1000)
-uni_all_com_post <-pairwise.perm.manova(uni_all,all_out_df$political_area,nperm=1000)
-uni_all_bio_post <-pairwise.perm.manova(uni_all,all_out_df$biological_matter,nperm=1000)
+
+bray_coral_pairwise <-pairwise.perm.manova(bray_coral, coral_df$expedition_number,nperm=1000,p.method = "BH") 
+uni_coral_pairwise <-pairwise.perm.manova(uni_coral,coral_df$expedition_number,nperm=1000,p.method = "BH")
+wuni_coral_pairwise <-pairwise.perm.manova(wuni_coral,coral_df$expedition_number,nperm=1000,p.method = "BH")
 
 ```
 
