--- a/GCMP_Analysis_Fall2024_V4.Rmd
+++ b/GCMP_Analysis_Fall2024_V4.Rmd
@@ -114,10 +114,10 @@ main_coral <- phyloseq(OTU,tax1,SAMPLE,TREE)
 
 library(gridExtra)
 # Remove features that have only been classified at the kingdom level
-phylo_noKing <-subset_taxa(main_coral, kingdom != "d__Eukaryota" & Phylum != "Unclassified d__Bacteria" & Order != "Unclassified Proteobacteria" & Family != "Mitochondria")
+phylo_noKing <-subset_taxa(main_coral, kingdom != "d__Eukaryota" & Phylum != "Unclassified d__Bacteria" & Order != "Unclassified Proteobacteria" & Family != c("Mitochondria","Unknown_Family"))
 
 # Remove features that are identified as Chloroplast and Mitochondria or unclassified bacteria
-phylo_noNA <- subset_taxa(phylo_noKing, kingdom != "Unassigned" & Phylum != "Unclassified Unassigned" & Order!= "Chloroplast" & Order !="Unclassified bacteroidia" & Class != "Unclassified Proteobacteria")
+phylo_noNA <- subset_taxa(phylo_noKing, kingdom != "Unassigned" & Phylum != "Unclassified Unassigned" & Order!= "Chloroplast" & Order !="Unclassified bacteroidia" & Class != "Unclassified Proteobacteria" & Family != "Unclassified Alphaproteobacteria")
 
 # Remove any samples with less than 1 read
 phylo_coral = prune_samples(sample_sums(phylo_noNA) > 1, phylo_noNA)
@@ -277,29 +277,55 @@ hawaii
 hawaii.rarefied = rarefy_even_depth(hawaii, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
 hawaii.rarefied
 
+## Compartment
+#### Subsample Mucus from Colombia
+mucus <-subset_samples(phylo_coral, political_area == "Colombia" & BiologicalMatter == "Coral Mucus")
+mucus
+
+# rarefy to even depth
+mucus.rarefied = rarefy_even_depth(mucus, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+mucus.rarefied
+
+#### Subsample Panama east E12 E5
+tissue <-subset_samples(phylo_coral, political_area == "Colombia" & BiologicalMatter == "Coral Tissue")
+tissue
+# rarefy to even depth
+tissue.rarefied = rarefy_even_depth(tissue, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+tissue.rarefied
+
+#### Subsample Panama east E12 E5
+skeleton <-subset_samples(phylo_coral, political_area == "Colombia" & BiologicalMatter == "Coral Skeleton")
+skeleton
+# rarefy to even depth
+skeleton.rarefied = rarefy_even_depth(skeleton, rngseed=111, sample.size=2000, replace=F, trimOTUs = TRUE)
+skeleton.rarefied
 
 ## Aglomerate Taxa to Family Level
 glom_col <- tax_glom(colombia.rarefied, taxrank = 'Family', NArm = TRUE)##  150 samples
 glom_col5 <- tax_glom(colombia.rarefied5, taxrank = 'Family', NArm = TRUE)## 65 samples
 glom_col12 <- tax_glom(colombia.rarefied12, taxrank = 'Family', NArm = TRUE)## 85 samples
-glom_col_orb <- tax_glom(col.orb.rarefied, taxrank = 'Family', NArm = TRUE)## 33 samples
-glom_col12_orb <- tax_glom(orb.rarefied, taxrank = 'Family', NArm = TRUE)## 18 Samples
-glom_ofav <- tax_glom(faveolata.rarefied, taxrank = 'Family', NArm = TRUE)## 15 Samples all from Colombia
-glom_pan_ofav <- tax_glom(pan.ofav.rarefied, taxrank = 'Family', NArm = TRUE) # 9 Samples
-glom_carib <-tax_glom(carib.rarefied, taxrank = 'Family', NArm = TRUE) ## 253 from  E2 Panama and Colombia E5 & E12
+#glom_col_orb <- tax_glom(col.orb.rarefied, taxrank = 'Family', NArm = TRUE)## 33 samples
+#glom_col12_orb <- tax_glom(orb.rarefied, taxrank = 'Family', NArm = TRUE)## 18 Samples
+#glom_ofav <- tax_glom(faveolata.rarefied, taxrank = 'Family', NArm = TRUE)## 15 Samples all from Colombia
+#glom_pan_ofav <- tax_glom(pan.ofav.rarefied, taxrank = 'Family', NArm = TRUE) # 9 Samples
+#glom_carib <-tax_glom(carib.rarefied, taxrank = 'Family', NArm = TRUE) ## 253 from  E2 Panama and Colombia E5 & E12
 
 glom_pan <- tax_glom(panama.rarefied, taxrank = 'Family', NArm = TRUE)##  185 samples from Panama E2 and E11 
-glom_panw <- tax_glom(panama.w.rarefied, taxrank = 'Family', NArm = TRUE)## 82 samples
+#glom_panw <- tax_glom(panama.w.rarefied, taxrank = 'Family', NArm = TRUE)## 82 samples
 glom_pane <- tax_glom(panama.e.rarefied, taxrank = 'Family', NArm = TRUE)##  102 samples
 glom_pan_orb <- tax_glom(pan.orb.rarefied, taxrank = 'Family', NArm = TRUE)## 35 samples
-glom_pan_ofav <- tax_glom(pan.ofav.rarefied, taxrank = 'Family',  NArm = TRUE)## 68 samples from the Caribbean
+#glom_pan_ofav <- tax_glom(pan.ofav.rarefied, taxrank = 'Family',  NArm = TRUE)## 68 samples from the Caribbean
 
 
 glom_env <- tax_glom(env.rarefied, taxrank = 'Family', NArm = TRUE)## 52 samples from Colombia, Panama only has one environmental sample
 glom_wat <- tax_glom(water.rarefied, taxrank = 'Family', NArm = TRUE)## 34 samples from Colombia, Panama only has one environmental sample
 glom_sed <- tax_glom(sed.rarefied, taxrank = 'Family', NArm = TRUE)## 17 samples from Colombia, Panama only has one environmental 
 glom_haw <- tax_glom(hawaii.rarefied, taxrank = 'Family', NArm = TRUE) ## 51 Samples 
-glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 386 Samples 
+#glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 386 Samples 
+
+#glom_mucus <- tax_glom(mucus.rarefied, taxrank = 'Family', NArm = TRUE)
+#glom_tissue <- tax_glom(tissue.rarefied, taxrank = 'Family', NArm = TRUE)
+#glom_skeleton <- tax_glom(skeleton.rarefied, taxrank = 'Family', NArm = TRUE)
 ```
 
 #Bruns et al. 2016 Neutral Model functions
@@ -404,15 +430,25 @@ RMSE.pois <- sqrt(sum((freq - pois.pred)^2)/(length(freq) - 1))
 
 pois.pred.ci <- binconf(pois.pred*nrow(spp), nrow(spp), alpha=0.01, method="wilson", return.df=TRUE)
 
+
+## Calculate pvalue from Wilson CI intervals 
+
+low <- pred.ci[,2]
+high <- pred.ci[,3]
+se <- (high-low)/(2*1.96)
+zstat <- (freq/se)
+padj <- (exp(-0.717*zstat-0.416*zstat^2))*N
+
 ##Results
 	if(stats==TRUE){
-		fitstats <- data.frame(m=numeric(), m.ci=numeric(), m.mle=numeric(), maxLL=numeric(), binoLL=numeric(), poisLL=numeric(), Rsqr=numeric(), Rsqr.bino=numeric(), Rsqr.pois=numeric(), RMSE=numeric(), RMSE.bino=numeric(), RMSE.pois=numeric(), AIC=numeric(), BIC=numeric(), AIC.bino=numeric(), BIC.bino=numeric(), AIC.pois=numeric(), BIC.pois=numeric(), N=numeric(), Samples=numeric(), Richness=numeric(), Detect=numeric())
-		fitstats[1,] <- c(coef(m.fit), coef(m.fit)-m.ci[1], m.mle@coef['m'], m.mle@details$value, bino.mle@details$value, pois.mle@details$value, Rsqr, Rsqr.bino, Rsqr.pois, RMSE, RMSE.bino, RMSE.pois, aic.fit, bic.fit, aic.bino, bic.bino, aic.pois, bic.pois, N, nrow(spp), length(p), d)
+		fitstats <- data.frame(m=numeric(), m.ci=numeric(), m.mle=numeric(), maxLL=numeric(), binoLL=numeric(), poisLL=numeric(), Rsqr=numeric(), Rsqr.bino=numeric(), Rsqr.pois=numeric(), RMSE=numeric(), RMSE.bino=numeric(), RMSE.pois=numeric(), AIC=numeric(), BIC=numeric(), AIC.bino=numeric(), BIC.bino=numeric(), AIC.pois=numeric(), BIC.pois=numeric(), N=numeric(), Samples=numeric(), Richness=numeric(), Detect=numeric(), se=numeric(), zstat=numeric(),padj=numeric())
+	
+			fitstats[1,] <- c(coef(m.fit), coef(m.fit)-m.ci[1], m.mle@coef['m'], m.mle@details$value, bino.mle@details$value, pois.mle@details$value, Rsqr, Rsqr.bino, Rsqr.pois, RMSE, RMSE.bino, RMSE.pois, aic.fit, bic.fit, aic.bino, bic.bino, aic.pois, bic.pois, N, nrow(spp), length(p), d, se,zstat,padj)
 		return(fitstats)
 	} else {
-	A <- cbind(p, freq, freq.pred, pred.ci[,2:3], bino.pred, bino.pred.ci[,2:3])
+	A <- cbind(p, freq, freq.pred, pred.ci[,2:3], bino.pred, bino.pred.ci[,2:3], low, high, zstat, padj)
 	A <- as.data.frame(A)
-		colnames(A) <- c('p', 'freq', 'freq.pred', 'pred.lwr', 'pred.upr', 'bino.pred', 'bino.lwr', 'bino.upr')
+		colnames(A) <- c('relative abundance (p)', 'frequency', 'freq.predidction', 'pred.lwr', 'pred.upr','z-statistic', 'padj','low_test','high_test')
 		if(is.null(taxon)){
 			B <- A[order(A[,1]),]
 		} else {
@@ -446,7 +482,7 @@ addf = function(freq, pred.upr, pred.lwr) {
 ###coral communities
 set.seed(111)
 coral <- 0
-coral <- prune_taxa(taxa_sums(glom_pan_ofav) > 0, glom_pan_ofav)
+coral <- prune_taxa(taxa_sums(glom_col12) > 0, glom_col12)
 coral
 otu_coral = as.data.frame(t(otu_table(coral)))
 
@@ -455,6 +491,7 @@ mod_w_coral = sncm.fit(otu_coral)
 mod1_w_coral = sncm.fit(otu_coral,stats = F)
 
 #min(sample_sums(glom_col_orb))
+print(length(mod_w_coral$freq))
 
 mod1_w_coral$model = mapply(addf, mod1_w_coral$freq, mod1_w_coral$pred.upr, mod1_w_coral$pred.lwr)  
 length(which(mod1_w_coral$model == "above"))
@@ -465,15 +502,15 @@ mod1_w_coral$model <- factor(mod1_w_coral$model,
                              levels = c("above", "neutral", "below"))
 
 ## Assign Taxonomy to table of significant microbes
-coral_taxa = cbind(as(mod1_w_coral, "data.frame"), as(tax_table(glom_pan_ofav)[rownames(mod1_w_coral), ], "matrix"))
+coral_taxa = cbind(as(mod1_w_coral, "data.frame"), as(tax_table(glom_pane)[rownames(mod1_w_coral), ], "matrix"))
 #coral_taxa
-write.csv(coral_taxa,"Panama E2 Orbicella faveolata Coral Samples Neutral Taxonomy table.csv",row.names = TRUE)
+write.csv(coral_taxa,"Panama E12 Coral Samples Neutral Taxonomy table.csv",row.names = TRUE)
 
 
 set.seed(111)
 ###seawater communities
 #seawater <- subset_samples(physeq2, SampleType == "seawater")
-seawater <- prune_taxa(taxa_sums(glom_ofav) > 0, glom_ofav )
+seawater <- prune_taxa(taxa_sums(glom_col5) > 0, glom_col5 )
 seawater
 
 otu_seawater = as.data.frame(t(otu_table(seawater)))
@@ -491,9 +528,9 @@ mod1_w_seawater$model <- factor(mod1_w_seawater$model,
                                 levels = c("above", "neutral", "below"))
 
 ## Assign Taxonomy to table of significant microbes
-env_taxa = cbind(as(mod1_w_seawater, "data.frame"), as(tax_table(glom_glom_col_orbofav)[rownames(mod1_w_seawater), ], "matrix"))
+env_taxa = cbind(as(mod1_w_seawater, "data.frame"), as(tax_table(glom_col5)[rownames(mod1_w_seawater), ], "matrix"))
 
-write.csv(env_taxa,"Colombia E5 & E12 Orbicella faveolata Coral Samples Neutral Taxonomy table.csv",row.names = TRUE)
+write.csv(env_taxa,"Colombia E5 Samples Neutral Taxonomy table.csv",row.names = TRUE)
 
 
 ```
@@ -526,7 +563,7 @@ p_neuM_coral=ggplot(mod1_w_coral, aes(x=log10(p), y=freq, color = model))+
 
 lb1 <- mod_w_coral$Rsqr
 lb2 <- mod_w_coral$m
-lb3 <- expression(paste("Panama E2 \n Orbicella faveolata Coral Samples"))
+lb3 <- expression(paste("Colombia E5 Coral Samples"))
 
 p_neuM_coral1 = p_neuM_coral + annotate("text", x = -3.5, y=0.7, size=6.5, label=lb1, 
                                         fontface="bold", color="black",
@@ -564,7 +601,7 @@ p_neuM_seawater=ggplot(mod1_w_seawater, aes(x=log10(p), y=freq, color = model))+
 
 ev1 <- mod_w_seawater$Rsqr
 ev2 <- mod_w_seawater$m
-ev3 <- expression(paste("Colombian E5 & E12 \n Orbicella faveolata Coral Samples"))
+ev3 <- expression(paste("Colombian Environmental Samples"))
 
 p_neuM_seawater1 = p_neuM_seawater + annotate("text", x = -3.5, y=0.7, size=6.5, label=ev1, 
                                               fontface="bold", color="black",
@@ -589,39 +626,51 @@ mp_ncm
 
 # BAR PLOTS: Coral Compartments
 ```{r, message=FALSE, warning=FALSE}
-#### Use from agglomerated phyloseq objects from Neutral Model Section
+## Flavobacteriaceae & Cyclobacteriaceae seems to be the most frequent and abundant between Pamana east & West
+## Found Across Ofav samples in Colombia E5: Order: Halanaerobiales Family: Halanaerobiaceae
+## Halobacteroidaceae
+## Colombia Neutral Model shows Actinomarinaceae high relative abundance but low frequency
+#Flavobacteriaceae, Cyanobiaceae, Rhodobacteraceae, Endozoicomonadaceae, Amoebophilaceae
+#Nitrosopumilaceae, Cyclobacteriaceae, Sphingomonadaceae, Alteromonadaceae
+## This was the most abundance across the Caribbean: Fokiniaceae
 
+#### Use from agglomerated phyloseq objects from Neutral Model Section
+flavo <- subset_taxa(coral.rarefied, Family == "Rhodobacteraceae", NArm = TRUE)
+flavo_prune = prune_samples(sample_sums(flavo)>1, flavo)
 # Transform sample counts to proportion out of 100
-ps.all = transform_sample_counts(glom_comp, function(x) x/sum(x)*100)
+
+glom <- tax_glom(flavo, taxrank = 'Genus', NArm = TRUE)
+
+ps.all = transform_sample_counts(flavo_prune, function(x) x/sum(x)*100)
 ps.melt <- psmelt(ps.all)
 
 # change to character for easy-adjusted level
 ps.melt <- ps.melt %>%
-  group_by(family,BiologicalMatter,host_genus,country_region,Family) %>%
+  group_by(Genus,BiologicalMatter,expedition_number,site_name) %>%
   mutate(median=median(Abundance)) %>%
   arrange(desc(median))
 
 # select group median > 1
-keep <- unique(ps.melt$Order[ps.melt$median > 10])
-ps.melt$Order[!(ps.melt$Order %in% keep)] <- "< %2 (Other)"
+keep <- unique(ps.melt$Genus[ps.melt$median >= 1])
+ps.melt$Genus[!(ps.melt$Genus %in% keep)] <- "< %1 (Other)"
 
 #to get the same rows together
 #to get the same rows together
 ps.melt_sum <- ps.melt %>%
-  group_by(family,BiologicalMatter,Family) %>%
-  summarize(Abundance = sum(Abundance), 
-            mean = mean(Abundance), .groups = "drop") %>%
-            mutate(Order= factor(Order),
-                   Order= fct_reorder(Order,mean, .desc = TRUE),
-                   Order= fct_shift(Order, n=1))
-# Then Plot Results
+  group_by(Genus,BiologicalMatter,expedition_number,site_name) %>%
+  summarise(Abundance = sum(Abundance), 
+            mean = sum(Abundance), .groups = "drop") %>%
+            mutate(Genus= factor(Genus),
+                   Genus= fct_reorder(Genus ,mean, .desc = TRUE),
+                   Genus= fct_shift(Genus, n=1))
+
 # create an object with color blind safe orientation
 many_col <- c("#A6CEE3", "#33A02C", "#B2DF8A",  "#1F78B4","#E31A1C","#6A3D9A", "#FF7F00","#FDBF6F", "#FB9A99", "#CAB2D6",  "#B15928","#1B9E77", "#D95F02", "#FFFF99","#E7298A", "#7570B3","#666666" ,"#66A61E", "#E6AB02","#A6761D", "#E41A1C", "#377EB8", "#4DAF4A" ,"#984EA3", "#FF7F00", "#FFFF33", "#A65628", "#F781BF" ,"#D53E4F","#F46D43", "#FDAE61", "#FEE08B","#999999", "#E6F598","#ABDDA4","#3288BD","cyan1","#66C2A5")
 
 testp <-0
-testp <-ggplot(ps.melt, aes(x = family, y = Abundance, fill = Family)) + 
+testp <-ggplot(ps.melt_sum, aes(x = BiologicalMatter, y = Abundance, fill = Genus)) + 
   geom_bar(stat = "identity", position="fill")  +
-  labs( x=" family", y="Percent Relative Abundance (%)") +  scale_fill_manual(name=NULL, values = c(many_col))  +  facet_wrap(~BiologicalMatter, scales= "free_x", nrow=1) +  
+  labs( x=" Genus", y="Percent Relative Abundance (%)") +  scale_fill_manual(name=NULL, values = c(many_col))  +  facet_wrap(~BiologicalMatter, scales= "free_x", nrow=1) +  
   theme_classic() + theme(strip.background = element_blank(), axis.text.x.bottom = element_text(angle = 180) +
   theme(axis.text=element_text(size=12), axis.title=element_text(size=14,face="bold"), plot.title = element_text(size = 14, face = "bold",hjust = 0.5,),legend.text = element_text(size = 8), legend.box = "vertical") + theme(legend.text = element_text(size=12))+
                   theme(legend.key.size = unit(.9, 'cm')))  #title =expression(paste(italic(" Oribcella Spp."),"Microbial Community Composition Across Depth ")), + #
@@ -660,15 +709,18 @@ pan_df <- data.frame(sample_data(panama.rarefied))
 
 ## Flavobacteriaceae & Cyclobacteriaceae seems to be the most frequent and abundant between Pamana east & West
 ## Found Across Ofav samples in Colombia E5: Order: Halanaerobiales Family: Halanaerobiaceae
-## Lastly, I looked at Endozoicomonadaceae
+## Halobacteroidaceae
 ## Colombia Neutral Model shows Actinomarinaceae high relative abundance but low frequency
 #Flavobacteriaceae, Cyanobiaceae, Rhodobacteraceae, Endozoicomonadaceae, Amoebophilaceae
 #Nitrosopumilaceae, Cyclobacteriaceae, Sphingomonadaceae, Alteromonadaceae
 ## This was the most abundance across the Caribbean: Fokiniaceae
 #glom_flavo <-tax_glom(flavo, taxrank = 'Order', NArm = TRUE)
 
-flavo <- subset_taxa(phylo_coral, Family== "Flavobacteriaceae")
+flavo <- subset_taxa(coral.rarefied, Family== "Rhodobacteraceae", NArm = TRUE)
 flavo_prune = prune_samples(sample_sums(flavo)>1, flavo)
+
+flavo
+flavo_prune
 
 ## Complex Corals 
 bray_flavo = phyloseq::distance(flavo_prune, method="bray")
@@ -678,11 +730,14 @@ wuni_flavo= phyloseq::distance(flavo_prune, method="wUnifrac")
 # Create data frame for downstream analysis
 flavo_df <- data.frame(sample_data(flavo_prune))
 
-## Subset taxa of Cyclobacteriaceae
-cyclo <- subset_taxa(phylo_coral, Family=="Cyclobacteriaceae")
+## Subset taxa of Cyanobiaceae
+cyclo <- subset_taxa(coral.rarefied, Family=="Cyanobiaceae", NArm = TRUE)
 cyclo_prune = prune_samples(sample_sums(cyclo)>1, cyclo)
 
-## Cyclobacteriaceae  
+cyclo
+cyclo_prune
+
+## Cyanobiaceae  
 bray_cyclo = phyloseq::distance(cyclo_prune, method="bray")
 uni_cyclo = phyloseq::distance(cyclo_prune, method="unifrac")
 wuni_cyclo = phyloseq::distance(cyclo_prune, method="wUnifrac")
@@ -691,7 +746,7 @@ wuni_cyclo = phyloseq::distance(cyclo_prune, method="wUnifrac")
 cyclo_df <- data.frame(sample_data(cyclo_prune))
 
 ## Subset taxa of Endozoicomonadaceae
-endo <- subset_taxa(phylo_coral, Family=="Endozoicomonadaceae")
+endo <- subset_taxa(coral.rarefied, Family=="Endozoicomonadaceae")
 endo_prune = prune_samples(sample_sums(endo)>1, endo)
 
 ## Endozoicomonadaceae  
@@ -706,11 +761,11 @@ endo_df <- data.frame(sample_data(cyclo_prune))
 # Ordination from Distance Matrix and PCoA Plots 
 ```{r}
 ##Calculate the PCoA on Complex Corals
-rt.pcoa = ordinate(carib.rarefied, method="PCoA", distance=bray_carib)
+rt.pcoa = ordinate(flavo_prune, method="PCoA", distance=uni_flavo)
 # Set variables to zero for subsequent changes
 # expedition_number
 pcoa<-0
-pcoa <- plot_ordination(carib.rarefied, rt.pcoa,  shape = "expedition_number",color="BiologicalMatter")+  geom_point(size=3) + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + stat_ellipse(level = 0.95,type = "norm",aes(group=BiologicalMatter))+ theme(legend.text=element_text(size=12)) + theme(axis.text=element_text(size=12, face = "bold"), axis.title=element_text(size=14,face="bold") + theme(text = element_text(size = 20,face = "bold"))) # title =expression(paste(italic(" Orbicella spp")," Bray-Curtis Distance PCoA across Depth")) scale_color_manual(values=c("#E31A1C","#1F78B4"))+
+pcoa <- plot_ordination(flavo_prune, rt.pcoa,  shape = "sample_type",color="run_prefix")+  geom_point(size=3) + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + stat_ellipse(level = 0.95,type = "norm",aes(group=sequence_run))+ theme(legend.text=element_text(size=12)) + theme(axis.text=element_text(size=12, face = "bold"), axis.title=element_text(size=14,face="bold") + theme(text = element_text(size = 20,face = "bold"))) # title =expression(paste(italic(" Orbicella spp")," Bray-Curtis Distance PCoA across Depth")) scale_color_manual(values=c("#E31A1C","#1F78B4"))+
                       
 
 ```
@@ -731,23 +786,23 @@ complex_diversity_compartment <- plot_richness(complex, x="family", color = "Gen
 ```{r}
 
 #env material include mucus, tissue and skeleton, and outgroups without eDNA
-distance_methods <-c("bray_carib","uni_carib","wuni_carib")
+distance_methods <-c("bray_flavo","uni_flavo","wuni_flavo")
 set.seed(129)
 
 # This is what is called a for loop.        
 for (i in distance_methods){ 
-  form <- as.formula(paste(i,"expedition_number+family+BiologicalMatter", sep="~"))
+  form <- as.formula(paste(i,"expedition_number+family+sample_type", sep="~"))
   print(form)
- adonis2(form, data=carib_df)-> result
+ adonis2(form, data=flavo_df)-> result
  print(result)
 }
  
 
 ## Post-hoc comparison between Coral Compartments and Location
 
-bray_carib_pairwise <-pairwise.perm.manova(bray_carib, carib_df$run_lane,nperm=1000,p.method = "BH") 
-uni_carib_pairwise <-pairwise.perm.manova(uni_carib,carib_df$run_lane,nperm=1000,p.method = "BH")
-wuni_carib_pairwise <-pairwise.perm.manova(wuni_carib,carib_df$run_lane,nperm=1000,p.method = "BH")
+bray_carib_pairwise <-pairwise.perm.manova(bray_carib, carib_df$expedition_number,nperm=1000,p.method = "BH") 
+uni_carib_pairwise <-pairwise.perm.manova(uni_carib,carib_df$expedition_number,nperm=1000,p.method = "BH")
+wuni_carib_pairwise <-pairwise.perm.manova(wuni_carib,carib_df$expedition_number,nperm=1000,p.method = "BH")
 
 ```
 
@@ -756,10 +811,10 @@ wuni_carib_pairwise <-pairwise.perm.manova(wuni_carib,carib_df$run_lane,nperm=10
 ## Use Distance matricies created above
 
 # run hclust command
-hc <- hclust(wuni_endo, method = "ward.D2")
+hc <- hclust(uni_flavo, method = "ward.D2")
 
 # Get Tree tip label names 
-tip_label <- endo_dd$BiologicalMatter
+tip_label <- flavo_df$sample_type
 
 # Add tip labels to hclust object
 hc$labels <- tip_label
@@ -777,7 +832,7 @@ dend %>% set("leaves_pch", 15) %>%
   color_branches(dend, k=4) %>%
   set("labels_col", k=4) %>%
   hang.dendrogram(hang_height = -0.002) %>% # hang level
-  plot(main = "Colombia \n Cyclobacteriaceae Dendrogram",
+  plot(main = "  Rhodobacteraceae \n   unifrac Dendrogram",
   horiz =  FALSE,  nodePar = list(cex = 0.01))
 
 
